# monstermaker_core

./: Cargo.toml  README.md
src/: lib.rs  monster.rs  species.rs  type.rs
